[package]
name = "ectoplasm"
version = "0.1.0"
authors = ["Mate Kovacs <mkovaxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
url = "2.2.0"
